<resources>
    <string name="app_name">NUMSD21S-LauraWorboys</string>
    <string name="action_settings">Settings</string>

    <string name="clicky_clicky_label">Clicky Clicky</string>

    <string name="about">About</string>

    <string name="plumeria_image">plumeria image</string>

    <string name="d">D</string>
    <string name="e">E</string>
    <string name="f">F</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="c">C</string>

    <string name="A">Pressed: A</string>
    <string name="B">Pressed: B</string>
    <string name="C">Pressed: C</string>
    <string name="D">Pressed: D</string>
    <string name="E">Pressed: E</string>
    <string name="F">Pressed: F</string>
    <string name="HelloMain">TextView</string>

    <string name="plumeria">plumeria</string>
    <string name="laura_worboys">Laura Worboys</string>
    <string name="previous">Previous</string>
    <string name="worboys_l_northeastern_edu">worboys.l@northeastern.edu</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="press_a_button">Press A Button!</string>
    <string name="link_collector">Link Collector</string>
    <string name="add_links_to_page">Add links to page</string>
    <string name="item_name">TextView</string>
    <string name="temp_holder">temp holder</string>
    <string name="url">url</string>

    <string name="enter_url_here">Enter URL Here</string>
    <string name="url_name">URL Name</string>
    <string name="enter_actual_url_here">Enter Actual URL Here</string>
    <string name="UrlNameAlert">URL Name</string>
    <string name="UrlAddressAlert">URL Address</string>
    <string name="enter_url_name_url_address">Enter URL Name URL Address</string>
    <string name="locator">Locator</string>
    <string name="title_activity_locator">locator</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>

    <string name="allowLocation">Must allow location to get coordinates</string>
    <string name="latitude">latitude</string>
    <string name="current_latitude">current latitude</string>
    <string name="locate_me">locate me</string>
    <string name="longitude">longitude</string>
    <string name="current_longitude">current longitude</string>
    <string name="title_activity_at_your_service">at_your_service</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="at_your_service">At Your Service</string>
    <string name="button">Button</string>

    <string name="ride1" />
    <string name="haunted_mansion">Haunted Mansion</string>

    <string name="done">Done</string>
    <string name="ride_info">Getting Ride Info</string>
    <string name="space">\\s</string>
    <string name="duration">Duration :</string>
    <string name="opened_on">Opened On :</string>
    <string name="textview">TextView</string>
    <string name="magic_kingdom_ride_info">Magic Kingdom Ride Info</string>
    <string name="select_ride">Select Ride</string>
    <string name="ride_duration">Ride Duration :</string>
    <string name="minutes">minutes</string>
    <string name="info_progress">Info Progress</string>
    <string name="date">date</string>
    <string name="height_restriction">Height Restriction :</string>
    <string name="heightres">heightRes</string>
    <string name="inches">inches</string>
    <string name="getting_ride_info">Getting Ride Info</string>
    <string name="_0">0</string>


</resources>