<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ClickyClicky">

    <Button
        android:id="@+id/button_A"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:onClick="onClick"
        android:text="@string/a"
        app:backgroundTint="#FD0000"
        app:layout_constraintEnd_toStartOf="@+id/button_B"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_B"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:onClick="onClick"
        android:text="@string/b"
        app:backgroundTint="#952FFA"
        app:layout_constraintEnd_toStartOf="@+id/button_C"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_A"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:onClick="onClick"
        android:text="@string/c"
        app:backgroundTint="#0298FB"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_B"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_D"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:onClick="onClick"
        android:text="@string/d"
        app:backgroundTint="#19FA85"
        app:layout_constraintEnd_toStartOf="@+id/button_E"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_E"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:onClick="onClick"
        android:text="@string/e"
        app:backgroundTint="#F3CB00"
        app:layout_constraintEnd_toStartOf="@+id/button_F"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_D"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_F"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="188dp"
        android:onClick="onClick"
        android:text="@string/f"
        app:backgroundTint="#FA8304"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_E"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/alphaButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:text="@string/press_a_button"
        android:freezesText="true"
        android:fontFamily="sans-serif-condensed-medium"
        android:textColor="#706F6F"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_E"
        app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>