<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:textAlignment="center"
    tools:context=".AtYourService">

    <Button
        android:id="@+id/service_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="requestInfo"
        android:text="@string/select_ride"
        app:layout_constraintBottom_toTopOf="@id/rideProgess"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <TextView
        android:id="@+id/rideDuration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="132dp"
        android:fontFamily="@font/coming_soon"
        android:text="duration"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintLeft_toRightOf="@id/rideDur"
        app:layout_constraintBottom_toTopOf="@id/rideOpenDate"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/rideDur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="36dp"
        android:fontFamily="@font/coming_soon"
        android:text="@string/ride_duration"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintBottom_toTopOf="@id/rideOpening"/>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="293dp"
        android:layout_height="63dp"
        android:layout_marginBottom="16dp"
        android:orientation="vertical"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/service_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Spinner
            android:id="@+id/rideNames"
            android:layout_width="289dp"
            android:layout_height="52dp"
            android:textAlignment="center" />
    </LinearLayout>

    <TextView
        android:id="@+id/rideOpening"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="108dp"
        android:fontFamily="@font/coming_soon"
        android:text="@string/opened_on"
        android:textSize="18sp"
        android:textStyle="bold"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rideDur" />

    <TextView
        android:id="@+id/rideOpenDate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="108dp"
        android:fontFamily="@font/coming_soon"
        android:text="@string/date"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/rideOpening"
        app:layout_constraintTop_toBottomOf="@+id/rideDuration" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/coming_soon"
        android:text="@string/magic_kingdom_ride_info"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.214" />

    <TextView
        android:id="@+id/min"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:fontFamily="@font/coming_soon"
        android:text="@string/minutes"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.081"
        app:layout_constraintStart_toEndOf="@+id/rideDuration"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/rideProgess"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/info_progress"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/service_button" />

    <TextView
        android:id="@+id/heightInfo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="42dp"
        android:layout_marginBottom="38dp"
        android:fontFamily="@font/coming_soon"
        android:text="@string/height_restriction"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rideOpening"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/heightRes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="@font/coming_soon"
        android:text="@string/_0"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintLeft_toRightOf="@id/heightInfo"
        app:layout_constraintTop_toBottomOf="@+id/rideOpenDate"
        app:layout_constraintVertical_bias="1.0" />

    <TextView
        android:id="@+id/inches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="39dp"
        android:fontFamily="@font/coming_soon"
        android:text="@string/inches"
        android:textSize="12sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.151"
        app:layout_constraintStart_toEndOf="@+id/heightRes"
        app:layout_constraintTop_toBottomOf="@id/min"
        app:layout_constraintVertical_bias="0.991" />

</androidx.constraintlayout.widget.ConstraintLayout>