<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffb39c"
    tools:context=".MainActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/Theme.NUMSD21SLauraWorboys.AppBarOverlay"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/atYourService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif-condensed-medium"
            android:onClick="onClick"
            android:text="@string/at_your_service"

            android:textColor="#706F6F"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:backgroundTint="#FF31FFE2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/locatorButton" />

        <Button
            android:id="@+id/aboutMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif-condensed-medium"
            android:onClick="onClick"
            android:text="@string/about"
            android:textColor="#706F6F"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:backgroundTint="#FF31FFE2"
            app:layout_constraintBottom_toTopOf="@+id/ClickyButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/plumeriaMain" />

        <TextView
            android:id="@+id/helloMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:background="#0000BCD4"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="Hello World!"
            android:textColor="#706F6F"
            android:textSize="30sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/plumeriaMain"
            android:layout_width="149dp"
            android:layout_height="128dp"
            android:layout_marginTop="20dp"
            android:contentDescription="@string/plumeria"
            android:visibility="visible"
            app:layout_constraintBottom_toTopOf="@+id/aboutMain"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/helloMain"
            app:srcCompat="@mipmap/ic_launcher_plum" />

        <Button
            android:id="@+id/ClickyButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif-condensed-medium"
            android:onClick="onClick"
            android:text="@string/clicky_clicky"
            android:textColor="#706F6F"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:backgroundTint="#FF31FFE2"
            app:layout_constraintBottom_toTopOf="@+id/LinkButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/aboutMain" />

        <Button
            android:id="@+id/LinkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif-condensed-medium"
            android:onClick="onClick"
            android:text="@string/link_collector"
            android:textColor="#706F6F"
            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:backgroundTint="#FF31FFE2"
            app:layout_constraintBottom_toTopOf="@+id/locatorButton"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ClickyButton"
            tools:visibility="visible" />

        <Button
            android:id="@+id/locatorButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_background"
            android:fontFamily="sans-serif-condensed-medium"
            android:onClick="onClick"
            android:text="@string/locator"
            android:textColor="#706F6F"

            android:textSize="18sp"
            android:textStyle="bold"
            android:visibility="visible"
            app:backgroundTint="#FF31FFE2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/LinkButton" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>